# pdi_parcial1

./: tecnicas_mejora_img.ipynb
informe/: .gitignore  Makefile  bibliography.bib  informe.tex  readme.md
informe/histogramas/2015_00002/: bhepl-d_histograma.pgf  clahe_histograma.pgf  dqhepl_histograma.pgf  he_histograma.pgf  original_histograma.pgf
informe/histogramas/2015_00026/: bhepl-d_histograma.pgf  clahe_histograma.pgf  dqhepl_histograma.pgf  he_histograma.pgf  original_histograma.pgf
informe/histogramas/2015_00027/: bhepl-d_histograma.pgf  clahe_histograma.pgf  dqhepl_histograma.pgf  he_histograma.pgf  original_histograma.pgf
informe/histogramas/2015_00051/: bhepl-d_histograma.pgf  clahe_histograma.pgf  dqhepl_histograma.pgf  he_histograma.pgf  original_histograma.pgf
informe/histogramas/2015_00054/: bhepl-d_histograma.pgf  clahe_histograma.pgf  dqhepl_histograma.pgf  he_histograma.pgf  original_histograma.pgf
src/: .gitignore  CLAHE.py  Ecual.py  Met.py  README.md  main.py  medidas.py  metodos.py  pyproject.toml  resumen_estadisticas.txt
